--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,20 @@
 # Ignorar archivos sensibles
 .env
-.env
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+*.pyw
+*.pyz
+*.py
+*.log
+*.txt
+*.json
+*.csv
+*.xlsx
+*.xls
+*.db
+*.sqlite
+*.sqlite3
+*.db3
+*.env
