--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+flask==3.1.0
+twilio==9.4.4
+python-dotenv==1.0.1
 psycopg2==2.9.10
-python-dotenv
-flask
-twilio
-openai
-requests
+openai==1.61.0
+requests==2.32.3
+werkzeug==3.1.3
+logging
